@@ -8,6 +8,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/dashboard")
@@ -29,7 +30,7 @@ public class DashboardController {
             double amount = inv.getAmount() != null ? inv.getAmount() : 0.0;
             
             // Group by investment type for Asset Allocation (SIP vs Lumpsum)
-            String type = inv.getInvestment_type();
+            String type = inv.getInvestmentType();
             if (type == null || type.trim().isEmpty()) {
                 type = "Other";
             }
@@ -37,16 +38,16 @@ public class DashboardController {
             double currentInvested = amount;
             double currentVal = currentInvested;
             
-            if (inv.getBuy_date() != null) {
+            if (inv.getBuyDate() != null) {
                 if ("SIP".equalsIgnoreCase(type)) {
-                    long monthsPassed = java.time.temporal.ChronoUnit.MONTHS.between(inv.getBuy_date(), java.time.LocalDate.now());
+                    long monthsPassed = java.time.temporal.ChronoUnit.MONTHS.between(inv.getBuyDate(), java.time.LocalDate.now());
                     if (monthsPassed < 0) monthsPassed = 0;
                     long n = monthsPassed + 1; 
                     currentInvested = amount * n;
                     
-                    if (inv.getCurrent_nav() != null && inv.getNav_at_buy() != null && inv.getNav_at_buy() > 0) {
+                    if (inv.getCurrentNav() != null && inv.getNavAtBuy() != null && inv.getNavAtBuy() > 0) {
                         // If we have live NAV, calculate based on growth
-                        currentVal = currentInvested * (inv.getCurrent_nav() / inv.getNav_at_buy());
+                        currentVal = currentInvested * (inv.getCurrentNav() / inv.getNavAtBuy());
                     } else {
                         // SIP Formula: M = P × ({[1 + i]^n - 1} / i) × (1 + i)
                         double i = 0.01; // 1% monthly
@@ -58,19 +59,19 @@ public class DashboardController {
                     }
                 } else {
                     // Lumpsum
-                    long days = java.time.temporal.ChronoUnit.DAYS.between(inv.getBuy_date(), java.time.LocalDate.now());
+                    long days = java.time.temporal.ChronoUnit.DAYS.between(inv.getBuyDate(), java.time.LocalDate.now());
                     if (days < 0) days = 0;
                     currentInvested = amount;
                     
-                    if (inv.getCurrent_nav() != null && inv.getNav_at_buy() != null && inv.getNav_at_buy() > 0) {
-                        currentVal = currentInvested * (inv.getCurrent_nav() / inv.getNav_at_buy());
+                    if (inv.getCurrentNav() != null && inv.getNavAtBuy() != null && inv.getNavAtBuy() > 0) {
+                        currentVal = currentInvested * (inv.getCurrentNav() / inv.getNavAtBuy());
                     } else {
                         double years = days / 365.25;
                         currentVal = currentInvested * Math.pow(1.12, years);
                     }
                 }
             } else {
-                currentVal = currentInvested * (inv.getCurrent_nav() != null && inv.getNav_at_buy() != null && inv.getNav_at_buy() > 0 ? (inv.getCurrent_nav() / inv.getNav_at_buy()) : 1.12);
+                currentVal = currentInvested * (inv.getCurrentNav() != null && inv.getNavAtBuy() != null && inv.getNavAtBuy() > 0 ? (inv.getCurrentNav() / inv.getNavAtBuy()) : 1.12);
             }
             
             totalInvested += currentInvested;
@@ -87,7 +88,7 @@ public class DashboardController {
             map.put("name", entry.getKey());
             map.put("value", entry.getValue());
             return map;
-        }).toList();
+        }).collect(Collectors.toList());
 
         double profitLoss = portfolioValue - totalInvested;
 
